--- a/ETL_Mini_Project_AAhmed_SMa_PPrachi_MWegrzyn.ipynb
+++ b/ETL_Mini_Project_AAhmed_SMa_PPrachi_MWegrzyn.ipynb
@@ -21,175 +21,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cf_id</th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>blurb</th>\n",
-       "      <th>goal</th>\n",
-       "      <th>pledged</th>\n",
-       "      <th>outcome</th>\n",
-       "      <th>backers_count</th>\n",
-       "      <th>country</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>launched_at</th>\n",
-       "      <th>deadline</th>\n",
-       "      <th>staff_pick</th>\n",
-       "      <th>spotlight</th>\n",
-       "      <th>category &amp; sub-category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>147</td>\n",
-       "      <td>4661</td>\n",
-       "      <td>Baldwin, Riley and Jackson</td>\n",
-       "      <td>Pre-emptive tertiary standardization</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CAD</td>\n",
-       "      <td>1581573600</td>\n",
-       "      <td>1614578400</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>food/food trucks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1621</td>\n",
-       "      <td>3765</td>\n",
-       "      <td>Odom Inc</td>\n",
-       "      <td>Managed bottom-line architecture</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>14560</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>158</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1611554400</td>\n",
-       "      <td>1621918800</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>music/rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1812</td>\n",
-       "      <td>4187</td>\n",
-       "      <td>Melton, Robinson and Fritz</td>\n",
-       "      <td>Function-based leadingedge pricing structure</td>\n",
-       "      <td>108400</td>\n",
-       "      <td>142523</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>1425</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>1608184800</td>\n",
-       "      <td>1640844000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>technology/web</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2156</td>\n",
-       "      <td>4941</td>\n",
-       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
-       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>2477</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>24</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1634792400</td>\n",
-       "      <td>1642399200</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>music/rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1365</td>\n",
-       "      <td>2199</td>\n",
-       "      <td>Larson-Little</td>\n",
-       "      <td>Proactive foreground core</td>\n",
-       "      <td>7600</td>\n",
-       "      <td>5265</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>53</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1608530400</td>\n",
-       "      <td>1629694800</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>theater/plays</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cf_id  contact_id                 company_name  \\\n",
-       "0    147        4661   Baldwin, Riley and Jackson   \n",
-       "1   1621        3765                     Odom Inc   \n",
-       "2   1812        4187   Melton, Robinson and Fritz   \n",
-       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
-       "4   1365        2199                Larson-Little   \n",
-       "\n",
-       "                                           blurb    goal  pledged     outcome  \\\n",
-       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
-       "1               Managed bottom-line architecture    1400    14560  successful   \n",
-       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
-       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
-       "4                      Proactive foreground core    7600     5265      failed   \n",
-       "\n",
-       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
-       "0              0      CA      CAD   1581573600  1614578400       False   \n",
-       "1            158      US      USD   1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
-       "3             24      US      USD   1634792400  1642399200       False   \n",
-       "4             53      US      USD   1608530400  1629694800       False   \n",
-       "\n",
-       "   spotlight category & sub-category  \n",
-       "0      False        food/food trucks  \n",
-       "1       True              music/rock  \n",
-       "2      False          technology/web  \n",
-       "3      False              music/rock  \n",
-       "4      False           theater/plays  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "Missing optional dependency 'openpyxl'.  Use pip or conda to install openpyxl.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/compat/_optional.py:142\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 142\u001b[0m     module \u001b[39m=\u001b[39m importlib\u001b[39m.\u001b[39;49mimport_module(name)\n\u001b[1;32m    143\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n",
+      "File \u001b[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/importlib/__init__.py:127\u001b[0m, in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m    126\u001b[0m         level \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m--> 127\u001b[0m \u001b[39mreturn\u001b[39;00m _bootstrap\u001b[39m.\u001b[39;49m_gcd_import(name[level:], package, level)\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1030\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1007\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:984\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openpyxl'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Read the data into a Pandas DataFrame\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m crowdfunding_info_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(\u001b[39m'\u001b[39;49m\u001b[39m./Resources/crowdfunding.xlsx\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m crowdfunding_info_df\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_base.py:478\u001b[0m, in \u001b[0;36mread_excel\u001b[0;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m    476\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[1;32m    477\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m--> 478\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(io, storage_options\u001b[39m=\u001b[39;49mstorage_options, engine\u001b[39m=\u001b[39;49mengine)\n\u001b[1;32m    479\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[1;32m    480\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    481\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    482\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    483\u001b[0m     )\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_base.py:1513\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[1;32m   1510\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mengine \u001b[39m=\u001b[39m engine\n\u001b[1;32m   1511\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstorage_options \u001b[39m=\u001b[39m storage_options\n\u001b[0;32m-> 1513\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engines[engine](\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_io, storage_options\u001b[39m=\u001b[39;49mstorage_options)\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_openpyxl.py:548\u001b[0m, in \u001b[0;36mOpenpyxlReader.__init__\u001b[0;34m(self, filepath_or_buffer, storage_options)\u001b[0m\n\u001b[1;32m    533\u001b[0m \u001b[39m@doc\u001b[39m(storage_options\u001b[39m=\u001b[39m_shared_docs[\u001b[39m\"\u001b[39m\u001b[39mstorage_options\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m    534\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\n\u001b[1;32m    535\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    536\u001b[0m     filepath_or_buffer: FilePath \u001b[39m|\u001b[39m ReadBuffer[\u001b[39mbytes\u001b[39m],\n\u001b[1;32m    537\u001b[0m     storage_options: StorageOptions \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    538\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    539\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    540\u001b[0m \u001b[39m    Reader using openpyxl engine.\u001b[39;00m\n\u001b[1;32m    541\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    546\u001b[0m \u001b[39m    {storage_options}\u001b[39;00m\n\u001b[1;32m    547\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 548\u001b[0m     import_optional_dependency(\u001b[39m\"\u001b[39;49m\u001b[39mopenpyxl\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m    549\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(filepath_or_buffer, storage_options\u001b[39m=\u001b[39mstorage_options)\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/compat/_optional.py:145\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n\u001b[1;32m    144\u001b[0m     \u001b[39mif\u001b[39;00m errors \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraise\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 145\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(msg)\n\u001b[1;32m    146\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    148\u001b[0m \u001b[39m# Handle submodules: if we have submodule, grab parent module from sys.modules\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: Missing optional dependency 'openpyxl'.  Use pip or conda to install openpyxl."
+     ]
     }
    ],
    "source": [
@@ -200,40 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                   Non-Null Count  Dtype \n",
-      "---  ------                   --------------  ----- \n",
-      " 0   cf_id                    1000 non-null   int64 \n",
-      " 1   contact_id               1000 non-null   int64 \n",
-      " 2   company_name             1000 non-null   object\n",
-      " 3   blurb                    1000 non-null   object\n",
-      " 4   goal                     1000 non-null   int64 \n",
-      " 5   pledged                  1000 non-null   int64 \n",
-      " 6   outcome                  1000 non-null   object\n",
-      " 7   backers_count            1000 non-null   int64 \n",
-      " 8   country                  1000 non-null   object\n",
-      " 9   currency                 1000 non-null   object\n",
-      " 10  launched_at              1000 non-null   int64 \n",
-      " 11  deadline                 1000 non-null   int64 \n",
-      " 12  staff_pick               1000 non-null   bool  \n",
-      " 13  spotlight                1000 non-null   bool  \n",
-      " 14  category & sub-category  1000 non-null   object\n",
-      "dtypes: bool(2), int64(7), object(6)\n",
-      "memory usage: 103.6+ KB\n"
+     "ename": "NameError",
+     "evalue": "name 'crowdfunding_info_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Get a brief summary of the crowdfunding_info DataFrame.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m crowdfunding_info_df\u001b[39m.\u001b[39minfo()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'crowdfunding_info_df' is not defined"
      ]
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +115,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +305,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[[\"category\",\"subcategory\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split('/', n=1, expand=True)\n",
+    "crowdfunding_info_df.head(10)"
    ]
   },
   {
@@ -488,9 +331,11 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "crowdfunding_info_df[\"category & sub-category\"].unique()\n",
+    "categories = crowdfunding_info_df[\"category\"].unique()\n",
     "\n",
     "print(categories)\n",
+    "subcategories = crowdfunding_info_df[\"subcategory\"].unique()\n",
     "print(subcategories)"
    ]
   },
@@ -553,9 +398,9 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = [\"cat\" + str(cat_id) for cat_id in category_ids]\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [\"scat\" + str(scat_id) for scat_id in subcategory_ids ]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -568,8 +413,9 @@
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "category_df = pd.DataFrame({\"category_id\" : cat_ids, \"category_name\" : categories})\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({\"subcategory_id\" : scat_ids, \"subcategory_name\" : subcategories})"
    ]
   },
   {
@@ -671,6 +517,8 @@
     }
    ],
    "source": [
+    "category_df\n",
+    "category_df = category_df.rename(columns={'category_name': 'category'})\n",
     "category_df"
    ]
   },
@@ -863,6 +711,8 @@
     }
    ],
    "source": [
+    "subcategory_df\n",
+    "subcategory_df = subcategory_df.rename(columns={'subcategory_name': 'subcategory'})\n",
     "subcategory_df"
    ]
   },
@@ -3700,7 +3550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
